# Tracker_Price_Robot

./: .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml
app/: example.env  main.py
app/configs/: config.py
app/routers/: __init__.py  common.py
app/routers/commands/: __init__.py  base.py
postgres/: example.env
postgres/migrations/: 002_users.sql
src/bot/: main.py
src/bot/configs/: config.py
src/bot/engines/: __init__.py  engine.py  transaction.py
src/bot/models/: base.py  users.py
src/bot/parsers/: __init__.py  wildberries.py
src/bot/repositories/: __init__.py  users.py
src/bot/routers/commands/: __init__.py  base.py  products.py
src/bot/services/: __init__.py  users.py
